[gd_scene load_steps=9 format=3 uid="uid://d1fg8ja3fbfom"]

[ext_resource type="PackedScene" uid="uid://cu1fwe52xa2il" path="res://scenes/Player.tscn" id="1_1f0os"]
[ext_resource type="Script" path="res://assets/scripts/Game_Controller.gd" id="1_6i7ao"]
[ext_resource type="PackedScene" uid="uid://dcckkqm76twbs" path="res://scenes/Enemy.tscn" id="2_ce0b1"]
[ext_resource type="Script" path="res://assets/scripts/UnitController.gd" id="3_nt3wb"]
[ext_resource type="Script" path="res://assets/scripts/TurnController.gd" id="4_58lo4"]
[ext_resource type="PackedScene" uid="uid://bh25gofgorkax" path="res://scenes/text_overlay.tscn" id="5_4vo3a"]
[ext_resource type="PackedScene" uid="uid://cmjwry21xcisu" path="res://scenes/level_02.tscn" id="8_5muem"]
[ext_resource type="Script" path="res://assets/scripts/NavigationService.gd" id="8_r6v64"]

[node name="GameController" type="Node3D"]
script = ExtResource("1_6i7ao")

[node name="TextOverlay" parent="." instance=ExtResource("5_4vo3a")]

[node name="Player" parent="." groups=["Player"] instance=ExtResource("1_1f0os")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1, 0)

[node name="UnitController" type="Node3D" parent="."]
script = ExtResource("3_nt3wb")

[node name="Enemy" parent="UnitController" instance=ExtResource("2_ce0b1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1, 4)

[node name="TurnController" type="Node3D" parent="."]
script = ExtResource("4_58lo4")

[node name="NavigationService" type="Node" parent="."]
script = ExtResource("8_r6v64")

[node name="Level02" parent="." instance=ExtResource("8_5muem")]

[connection signal="child_order_changed" from="." to="NavigationService" method="_on_game_child_order_changed"]
[connection signal="turn_end" from="Player" to="TurnController" method="_player_turn_end"]
[connection signal="turn_end" from="UnitController" to="TurnController" method="_enemy_turn_end"]
[connection signal="take_enemy_turn" from="TurnController" to="UnitController" method="_on_enemy_turn"]
[connection signal="take_player_turn" from="TurnController" to="Player" method="_on_player_turn"]
